Мелкие исправления index.html

--- a/lw1/index.html
+++ b/lw1/index.html
@@ -5,6 +5,6 @@
     <title>Основная страница!</title>
   </head>
   <body>
-    <script src="js/search_arr_elements.js"></script>
+    <script src="js/element_search.js"></script>
   </body>
 </html>
